--- a/summary.html
+++ b/summary.html
@@ -1,11 +1,107 @@
+<!DOCTYPE html>
 <html>
 <head>
-<title>
-Summary
-</title>
-<link rel="icon" href="logo.png">
+    <title>Summary</title>
+    <link rel="icon" href="logo.png">
+    <style>
+        body {
+            background: url('sign_in_bg.png') no-repeat center center fixed;
+            background-size: cover;
+            color: white;
+            font-family: 'Poppins', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            position: relative;
+        }
+        .top-right {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            display: flex;
+            align-items: center;
+        }
+        .top-right img {
+            width: 50px;
+            height: 50px;
+            margin-right: 10px;
+        }
+        .top-right a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 16px;
+            display: inline-flex;
+            align-items: center;
+            text-shadow: 1px 1px 2px black; 
+        }
+        table {
+            border: 1px solid white;
+            text-align: left;
+            margin-bottom: 50px;
+        }
+        td {
+            color: white;
+            padding: 10px;
+            text-shadow: 1px 1px 2px black; 
+        }
+        .password {
+            font-weight: bold;
+            text-shadow: 1px 1px 2px black; 
+        }
+        footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            background: rgba(0, 0, 0, 0.5);
+            color: white;
+            text-shadow: 1px 1px 2px black; 
+        }
+    </style>
 </head>
 <body>
+    <div class="top-right">
+        <img src="logo.png" alt="AAU Icon">
+        <a href="http://www.aau.edu.jo">AAU</a>
+    </div>
+    <center>
+        <script>
+            const urlParams = new URLSearchParams(window.location.search);
+            const name = urlParams.get('name');
+            const password = urlParams.get('pass');
+            const gender = urlParams.get('gender'); 
+            const dep = urlParams.get('dep');
+            const subjsArray = urlParams.getAll('subjs');
+            
+            const subjectsMap = {
+                WD: "Web Design",
+                DS: "DataStructure",
+                SA: "System Analysis",
+                Java: "Java",
+                CPP: "C++", 
+                Python: "Python"
+            };
+            
+            const subjs = subjsArray.map(subj => subjectsMap[subj] || subj).join(', ');
+            const profilePic = urlParams.get('newpp') ? 'user.png' : '';
 
+            document.write(`<table>
+            <tr>
+            <td rowspan=6><img id="profile-pic" src="${profilePic}" height=140px width=140px></td></tr>
+            <tr><td>Hey ${name}</td></tr>
+            <tr>
+            <td>Your new password is: <span class="password">${password}</span></td></tr>
+            <tr><td>You are a ${gender}</td></tr>
+            <tr><td>Studying ${dep}</td></tr>
+            <tr><td>You've chosen ${subjs}</td></tr></table>`);
+        </script>
+    </center>
+    <footer>
+        Coded by: Hisham Khateeb &copy; 2025
+    </footer>
 </body>
 </html>
