--- a/signin.html
+++ b/signin.html
@@ -4,6 +4,38 @@
 <meta charset="UTF-8">
 <title>Login Page</title>
 <link rel="icon" href="logo.png">
+<style>
+  .background-container {
+    position: relative;
+    display: inline-block;
+    margin: auto;
+    padding: 20px;
+    border-radius: 15px; /* Adds curviness to the edges */
+    background: rgba(255, 255, 255, 0.8); /* White background with slight transparency */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: Adds a subtle shadow for depth */
+  }
+  .content {
+    position: relative;
+    z-index: 1;
+  }
+  .button {
+    background-color: #7d9b9d; /* Green background */
+    border: none;
+    color: white; /* White text */
+    padding: 15px 32px; /* Padding */
+    text-align: center; /* Centered text */
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px; /* Font size */
+    margin: 4px 2px;
+    cursor: pointer; /* Pointer/hand icon */
+    border-radius: 8px; /* Rounded corners */
+    transition: background-color 0.3s ease; /* Transition effect */
+  }
+  .button:hover {
+    background-color: #2f969d; /* Darker green background on hover */
+  }
+</style>
 </head>
 <body background="sign_in_bg.png">
 <center>
@@ -14,32 +46,37 @@
 <br>
 <br>
 <br>
-<form action="form.html" method="get" target="_self">
-<table>
-<tr rowspan=5></tr>
-<tr>
-<th><img src="logo.png"></th>
-</tr>
-<tr></tr>
-<tr>
-<th><font face="Poppins" color="Gray"><label for="stu#">Enter Your College Number</label></font></th>
-</tr>
-<tr>
-<td align="center"><input type="tel" id="name" name="id" pattern="202\d{6}" placeholder="ex:202312345" required></td>
-</tr>
-<tr>
-<th><font face="Poppins" color="Gray"><label for="pass">Enter Your Password</label></font></th>
-</tr>
-<tr>
-<td align="center"><input type="password" id="password" name="password" required minlength="6"></td>
-</tr>
-<tr>
-<td align="center">
-<input type="submit"><input type="reset"></td>
-</tr>
-</table>
-</form>
-<img src="form.png" alt="Background Image" style="position: absolute; top: 130px; left: 510px; width: 300px; height: 310px; z-index: -1;">
+<div class="background-container">
+  <div class="content">
+    <form action="form.html" method="get" target="_self">
+      <table>
+        <tr rowspan=5></tr>
+        <tr>
+          <th><img src="logo.png"></th>
+        </tr>
+        <tr></tr>
+        <tr>
+          <th><font face="Poppins" color="Gray"><label for="stu#">Enter Your College Number</label></font></th>
+        </tr>
+        <tr>
+          <td align="center"><input type="tel" id="name" name="id" pattern="202\d{6}" placeholder="ex:202312345" required></td>
+        </tr>
+        <tr>
+          <th><font face="Poppins" color="Gray"><label for="pass">Enter Your Password</label></font></th>
+        </tr>
+        <tr>
+          <td align="center"><input type="password" id="password" name="password" required minlength="6"></td>
+        </tr>
+        <tr>
+          <td align="center">
+            <button type="submit" class="button">Submit</button>
+            <button type="reset" class="button">Reset</button>
+          </td>
+        </tr>
+      </table>
+    </form>
+  </div>
+</div>
 </center>
 </body>
 </html>
