--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
 <title>Loading...</title>
 <meta http-equiv="refresh" content="3;url=signin.html">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+  body {
+    background-color: #2a2826;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+</style>
 </head>
-<body style="background-color: #2a2826;">
+<body>
 <center>
-<img src="loading.gif" alt="Loading">
+  <img src="loading.gif" alt="Loading">
 </center>
 </body>
 </html>
