--- a/summary.html
+++ b/summary.html
@@ -3,6 +3,7 @@
 <head>
     <title>Summary</title>
     <link rel="icon" href="logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             background: url('sign_in_bg.png') no-repeat center center fixed;
@@ -41,6 +42,8 @@
             border: 1px solid white;
             text-align: left;
             margin-bottom: 50px;
+            width: 90%;
+            max-width: 400px; /* Maximum width for larger screens */
         }
         td {
             color: white;
